# solana_projects

./: .git-credentials  .gitignore  Cargo.toml1  LICENSE  README.md  presentation.md
 counter/: Cargo.toml
 counter/src/: lib.rs
2- CPI-transfer/: Cargo.toml
CPI-transfer/: Cargo.toml
CPI-transfer-template/: Cargo.toml
counter/: .gitignore  Cargo.toml  README.md
counter/src/: lib.rs
review-frontend/: package-lock.json  package.json
review-frontend/src/components/: Form.tsx  Logo.tsx  ReviewCard.tsx
review-frontend/src/pages/: index.tsx
review-program/: Cargo.toml
review-program/src/: instruction.rs  lib.rs  state.rs
